--- a/portfolio.html
+++ b/portfolio.html
@@ -114,7 +114,7 @@
                 <h4>Project 1</h4>
                 <p>Flipkart clone</p>
                 <a href="assets/img/masonry-portfolio/flipkart.PNG" title="flipkart clone" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-              <!-- <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a> -->
+               <a href=" https://shahanafavas.github.io/Flipkart_clone/" title="Link" class="details-link"><i class="bi bi-link-45deg"></i></a> 
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -124,7 +124,7 @@
                 <h4>Project 2 </h4>
                 <p>Swiggy clone</p>
                 <a href="assets/img/masonry-portfolio/swiggy.PNG" title="swiggy clone" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-            <!--    <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>-->
+                <a href="https://shahanafavas.github.io/Swiggy_clone/" title="Link" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -134,7 +134,7 @@
                 <h4>Project 3</h4>
                 <p>Nike clone</p>
                 <a href="assets/img/masonry-portfolio/Nike.PNG" title="Nike clone" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-             <!--  <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>--> 
+               <a href="https://shahanafavas.github.io/Nike_clone/" title="Link" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
@@ -194,7 +194,7 @@
                 <h4>Project 4</h4>
                 <p>Portfolio website</p>
                 <a href="assets/img/masonry-portfolio/portfolio.PNG" title="Portfolio website" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-             <!--   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>-->
+               <a href="https://shahanafavas.github.io/portfolio-website/" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item --> 
 
